--- a/test.html
+++ b/test.html
@@ -271,7 +271,7 @@
                     คู่มือและขั้นตอนการติดตั้งโปรแกรมต่างๆ 
                     สำหรับผู้ใช้งานทั่วไปและผู้ดูแลระบบ พร้อมภาพประกอบขั้นตอนอย่างละเอียด
                 </p>
-                <a href="https://sites.google.com/view/itmouldmate-manualguide2/home" target="_blank" class="card-link">
+                <a href="https://drive.google.com/file/d/11sDHjgRhGgQD56ikyCcVTsmHurf5Csv4/view?usp=sharing" target="_blank" class="card-link">
                     เปิดคู่มือ <i class="fas fa-external-link-alt"></i>
                 </a>
             </div>
@@ -298,21 +298,15 @@
                 <i class="fas fa-info-circle"></i>
                 ข้อมูลอัพเดตล่าสุด
             </h3>
-            <div class="status-content">
-                <p>• สถานะงานไอที: อัพเดทข้อมูลล่าสุดเมื่อวันที่ 20 มิถุนายน 2567</p>
-                <p>• คู่มือการติดตั้ง: มีคู่มือใช้งานโปรแกรมทั้งหมด 15 รายการ</p>
-                <p>• ทรัพย์สินไอที: ระบบสามารถบันทึกและติดตามอุปกรณ์ไอทีทั้งหมดได้</p>
-                <p>• ทีมงานไอทีพร้อมให้บริการและสนับสนุนการใช้งานทุกช่องทาง</p>
-            </div>
         </div>
     </div>
     
     <footer>
         <div class="container">
-            <p>IT Management Portal &copy; 2024 - ศูนย์กลางข้อมูลระบบไอที</p>
+            <p>IT Management Portal &copy; 2026 - ศูนย์กลางข้อมูลระบบไอที</p>
             <p>ออกแบบเพื่อให้ใช้งานง่ายและเข้าถึงข้อมูลได้รวดเร็ว</p>
             <div class="update-time">
-                อัพเดทล่าสุด: 20 มิถุนายน 2567
+                อัพเดทล่าสุด: 26 มกราคม 2569
             </div>
         </div>
     </footer>
