--- a/Portal.html
+++ b/Portal.html
@@ -287,7 +287,7 @@
                     ระบบจัดการทรัพย์สินทางไอที (IT Asset Management) 
                     ตรวจสอบข้อมูลครุภัณฑ์ อุปกรณ์ และซอฟต์แวร์ทั้งหมดในองค์กร
                 </p>
-                <a href="https://script.google.com/macros/s/AKfycbzLv-hojzPi3iNPF28rY83Pez5VVOsmTXle3OEadiqTY1dBKhLe4oxBeI0H01TTaUOSCA/exec" target="_blank" class="card-link">
+                <a href="https://sarawutc6689-cpu.github.io/itusers/index2-itusers.html" target="_blank" class="card-link">
                     เปิดระบบทรัพย์สิน <i class="fas fa-external-link-alt"></i>
                 </a>
             </div>
