--- a/Portal.html
+++ b/Portal.html
@@ -291,6 +291,22 @@
                     เปิดระบบทรัพย์สิน <i class="fas fa-external-link-alt"></i>
                 </a>
             </div>
+
+            <div class="card">
+                <div class="card-header">
+                    <div class="card-icon">
+                        <i class="fas fa-key"></i>
+                    </div>
+                    <h2 class="card-title">อนุมัติเข้าใช้งานระบบ HelpDesk</h2>
+                </div>
+                <p class="card-description">
+                    เข้าอนุมัติการใช้งานระบบ HelpDesk ของพนักงาน โดยการค้นหาจากรหัสพนักงาน
+                </p>
+                <a href="https://script.google.com/macros/s/AKfycbw1aAWu2WJhyKuylvXlortn6OtOX2RGgsMWl6wWj9lG83FXpzvLqje0_TK6deZ44_SsIQ/exec" target="_blank" class="card-link">
+                    เปิดระบบทรัพย์สิน <i class="fas fa-external-link-alt"></i>
+                </a>
+            </div>
+
         </div>
     </div>
     
