--- a/it-home.html
+++ b/it-home.html
@@ -392,7 +392,7 @@
                     </div>
                     <h3>List Mail</h3>
                     <p>รายการอีเมลและระบบจัดการการติดต่อผ่านอีเมลภายในองค์กร</p>
-                    <a href="https://sites.google.com/view/list-mail/home" class="card-link" target="_blank">
+                    <a href="https://script.google.com/macros/s/AKfycbxpjkB95hp2mkqSEWghMCNGDOE4wH4ZK8WviUI0YsuzRJNiVlWvRz_g1sbnXKK0fQP5/exec" class="card-link" target="_blank">
                         ดูรายการเมล <i class="fas fa-external-link-alt"></i>
                     </a>
                 </div>
