--- a/test4.html
+++ b/test4.html
@@ -1025,7 +1025,7 @@
         ];
         
         // ตั้งรหัสผ่าน (สำหรับการทดสอบ: IT2023)
-        const EDIT_PASSWORD = "mm169Moo4";
+        const EDIT_PASSWORD = "mm1694";
         let currentDate = new Date();
         let currentWeekStart = new Date(currentDate);
         let nextEventId = 12;
