--- a/test.html
+++ b/test.html
@@ -326,12 +326,12 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="logo">
-                <div class="logo-icon">
-                    <i class="fas fa-headset"></i>
-                </div>
-                <div class="logo-text">Mouldmate Helpdesk</div>
-            </div>
+         <div class="logo">
+         <div class="logo-image">
+        <img src="https://drive.google.com/file/d/1tI6SffYNtUV-uePxgLrCF0x3VHZBAJmb/view?usp=drive_link" alt="Mouldmate Logo" style="height: 70px;">
+    </div>
+    <div class="logo-text">Mouldmate Helpdesk</div>
+</div>
             <p class="tagline">ระบบช่วยเหลือและสนับสนุนลูกค้าแบบครบวงจร พร้อมให้บริการคุณด้วยความรวดเร็วและมีประสิทธิภาพสูงสุด</p>
         </div>
 
