--- a/test.html
+++ b/test.html
@@ -328,7 +328,7 @@
         <div class="header">
          <div class="logo">
          <div class="logo-image">
-        <img src="https://drive.google.com/file/d/1tI6SffYNtUV-uePxgLrCF0x3VHZBAJmb/view?usp=drive_link" alt="Mouldmate Logo" style="height: 70px;">
+        <img src="https://drive.google.com/file/d/1g6UjqdgR1SZ8WWHI5pFA5fkeIRRTJtfr/view?usp=sharing" alt="Mouldmate Logo" style="height: 70px;">
     </div>
     <div class="logo-text">Mouldmate Helpdesk</div>
 </div>
